--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 dependencies = [
     "httpx>=0.27.0",
     "bs4>=0.0.2",
+    "click>=8.1.7",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
